<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBECF0"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.adroidapp.MainActivity" >

    <TextView
        android:id="@+id/dev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:gravity="center"
        android:text="@string/dev"
        android:textColor="#000000"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/solution_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/result_tv"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="16dp"
        android:gravity="right"
        android:hint="@string/zero"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textColor="#000000"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/result_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttons_layout"
        android:layout_margin="2dp"
        android:gravity="right"
        android:hint="@string/zero"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textColor="#000000"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#EBECF0"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button_c"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="#FF0000"
                android:text="@string/clear"
                android:textColor="#FFFFFF"
                android:textSize="40sp" />

            <Button
                android:id="@+id/button_open_bracket"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="#BEBEBE"
                android:text="@string/o_b"
                android:textColor="#0000FF"
                android:textSize="40sp" />

            <Button
                android:id="@+id/button_close_bracket"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="#BEBEBE"
                android:text="@string/c_b"
                android:textColor="#0000FF"
                android:textSize="40sp" />

            <Button
                android:id="@+id/button_divide"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="#FCAE1E"
                android:text="@string/divide"
                android:textColor="#FFFFFF"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button_7"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="#AADEDE"
                android:text="@string/seven"
                android:textColor="#000000"
                android:textSize="40sp" />

            <Button
                android:id="@+id/button_8"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="#AADEDE"
                android:text="@string/eight"
                android:textColor="#000000"
                android:textSize="40sp" />

            <Button
                android:id="@+id/button_9"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="#AADEDE"
                android:text="@string/nine"
                android:textColor="#000000"
                android:textSize="40sp" />

            <Button
                android:id="@+id/button_multiply"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="#FCAE1E"
                android:text="@string/multiply"
                android:textColor="#FFFFFF"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button_4"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="#AADEDE"
                android:text="@string/four"
                android:textColor="#000000"
                android:textSize="40sp" />

            <Button
                android:id="@+id/button_5"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="#AADEDE"
                android:text="@string/five"
                android:textColor="#000000"
                android:textSize="40sp" />

            <Button
                android:id="@+id/button_6"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="#AADEDE"
                android:text="@string/six"
                android:textColor="#000000"
                android:textSize="40sp" />

            <Button
                android:id="@+id/button_plus"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="#FCAE1E"
                android:text="@string/plus"
                android:textColor="#FFFFFF"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button_1"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="#AADEDE"
                android:text="@string/one"
                android:textColor="#000000"
                android:textSize="40sp" />

            <Button
                android:id="@+id/button_2"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="#AADEDE"
                android:text="@string/two"
                android:textColor="#000000"
                android:textSize="40sp" />

            <Button
                android:id="@+id/button_3"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="#AADEDE"
                android:text="@string/three"
                android:textColor="#000000"
                android:textSize="40sp" />

            <Button
                android:id="@+id/button_minus"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="#FCAE1E"
                android:text="@string/minus"
                android:textColor="#FFFFFF"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button_ac"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="#FF0000"
                android:text="@string/all_clear"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_0"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="#AADEDE"
                android:text="@string/zero"
                android:textColor="#000000"
                android:textSize="40sp" />

            <Button
                android:id="@+id/button_dot"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="#AADEDE"
                android:text="@string/dot"
                android:textColor="#000000"
                android:textSize="40sp" />

            <Button
                android:id="@+id/button_equals"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_margin="2dp"
                android:background="#FCAE1E"
                android:text="@string/equal"
                android:textColor="#FFFFFF"
                android:textSize="40sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>